--- a/index.html
+++ b/index.html
@@ -1,63 +1,17 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Toko Online Aku</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f9f9f9;
-    }
-    header {
-      background: #007bff;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    .produk-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      padding: 20px;
-    }
-    .produk {
-      background: white;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    .produk img {
-      width: 100%;
-      height: auto;
-    }
-    .produk h3 {
-      margin: 10px 0 5px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Toko Online Shobri</title>
 </head>
-<body>
-
-<header>
-  <h1>Selamat Datang di Toko Online Aku</h1>
-</header>
-
-<div class="produk-container">
-  <div class="produk">
-    <img src="joki.jpg" alt="Jasa Joki ML & Roblox">
-    <h3>Jasa Joki ML & Roblox</h3>
-    <p><i>Rank EPICK sampai IMMORTAL tersedia</i></p>
-  </div>
-
-  <div class="produk">
-    <img src="https://via.placeholder.com/200" alt="Produk 2">
-    <h3>Produk 2</h3>
-    <p>Rp 75.000</p>
-    <button>Beli</button>
-  </div>
-</div>
-
+<body style="text-align:center; font-family:sans-serif;">
+    <h1>Selamat Datang di Toko Online Shobri</h1>
+    <p>Di sini kami menyediakan joki Roblox dan ML</p>
+    <h3>List nya:</h3>
+    <p>MI</p>
+    <p>joki rank</p>
+    <img src="joki.jpg" alt="joki rank" width="500">
 </body>
 </html>
